--- a/css/styles.css
+++ b/css/styles.css
@@ -189,3 +189,22 @@ ul li {
 
 
 /* portfolio.html */
+.filter-btn{
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.62;
+        text-align: center;
+        letter-spacing: 0.03em;
+    
+        color: #212121;
+        background: #F5F4FA;
+            border-radius: 4px;
+}
+.filter-btn:active,
+.filter-btn:focus{
+    background: #2196F3;
+        /* shadow-middle */
+    
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+}
