--- a/css/styles.css
+++ b/css/styles.css
@@ -208,3 +208,26 @@ ul li {
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
         border-radius: 4px;
 }
+.card{
+    text-decoration-line: none;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.03em;
+    
+        color: #757575;
+}
+.card-title{
+    font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+    
+        color: #212121;
+}
+.card:hover,
+.card:focus,
+.card-title:hover,
+.card-title:focus{
+    color: #2196F3;
+}
