--- a/css/styles.css
+++ b/css/styles.css
@@ -203,10 +203,9 @@ ul li {
 .filter-btn:active,
 .filter-btn:focus{
     background: #2196F3;
-        /* shadow-middle */
-    
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-        border-radius: 4px;
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 .card{
     text-decoration-line: none;
@@ -225,9 +224,9 @@ ul li {
     
         color: #212121;
 }
-.card:hover,
+/* .card:hover,
 .card:focus,
 .card-title:hover,
 .card-title:focus{
     color: #2196F3;
-}
+} */
