--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,23 @@
-/* :root {
-    --primary-white-color
-    --accent-color
-    --title-text-color
-} */
+:root {
+    --logo-black-color: #000000;
+    --logo-blue-color: #2196F3;
+    --primary-white-color: #FFFFFF;
+    --secondary-white-color: #F5F4FA;
+    --accent-link-color: #2196F3;
+    --accent-btn-color: #188CE8;
+    --accent-filter-btn-color: #2196F3;
+    --title-text-color: #212121;
+    --paragraph-color: #757575;
+    --hero-bg-color: #2F303A;
+    --hero-btn-bg-color: #2196F3;
+    --footer-bg-color: #2F303A;
+}
 
 body {
     font-family: "Roboto", sans-serif;
-    font-style: normal;
+    font-size: 16px;
 
-    background-color: #FFFFFF;
+    background-color: var(--primary-white-color);
 }
 
 ul li {
@@ -24,19 +33,16 @@ ul li {
         font-size: 26px;
         line-height: 1.2;
 
-    color: #000000;
+    color: var(--logo-black-color);
 }
-.logo .web {
-    color: #2196f3;
+.logo .word-web {
+    color: var(--logo-blue-color);
 }
-.logo .studio{
-    color: #FFFFFF;
+.logo .word-studio{
+    color: var(--primary-white-color);
 }
 
 /* header */
-.header{
-    background-color: #FFFFFF;
-}
 /* link */
 .header-link {
     text-decoration-line: none;
@@ -44,12 +50,12 @@ ul li {
         font-size: 14px;
         line-height: 1.14;
 
-    color: #212121;
+    color: var(--title-text-color) ;
 }
 
 .header-link:hover,
 .header-link:focus {
-    color: #2196f3;
+    color: var(--accent-link-color);
 }
 /* contact */
 .header-contact {
@@ -58,31 +64,29 @@ ul li {
         font-size: 14px;
         line-height: 1.14;
 
-    color: #757575;
+    color: var(--paragraph-color);
 }
 
 .header-contact:hover,
 .header-contact:focus {
-    color: #2196f3;
+    color: var(--accent-link-color);
 }
 /* footer */
 .footer{
-    background-color: #2F303A;
+    background-color: var(--footer-bg-color);
 }
 .address-map {
     text-decoration-line: none;
         font-style: normal;
-        font-weight: 400;
         font-size: 14px;
         line-height: 1.71;    
         letter-spacing: 0.03em;
     
-    color: #FFFFFF;
+    color: var(--primary-white-color);
 }
 .address-contact{
     text-decoration-line: none;
         font-style: normal;
-        font-weight: 400;
         font-size: 14px;
         line-height: 1.71;    
         letter-spacing: 0.03em;
@@ -102,8 +106,8 @@ ul li {
         letter-spacing: 0.06em;
         text-transform: uppercase;
 
-    color: #FFFFFF;
-    background-color: #2F303A;
+    color: var(--primary-white-color);
+    background-color: var(--hero-bg-color);
 }
 /* button */
 .hero-btn {
@@ -112,12 +116,12 @@ ul li {
         line-height: 1.88;
         letter-spacing: 0.06em;
 
-    color: #FFFFFF;
-    background-color: #2196F3;
+    color: var(--primary-white-color);
+    background-color: var(--hero-btn-bg-color);
 }
 .hero-btn:hover,
 .hero-btn:focus{
-    background-color: #188CE8;
+    background-color: var(--accent-btn-color);
 }
 
 
@@ -131,15 +135,14 @@ ul li {
         letter-spacing: 0.03em;
         text-transform: uppercase;
 
-    color: #212121;
+    color: var(--title-text-color) ;
 }
 .feature-paragraph {
-    font-weight: 400;
         font-size: 14px;
         line-height: 1.7;
         letter-spacing: 0.03em;
 
-    color: #757575;
+    color: var(--paragraph-color);
 }
 
 
@@ -152,12 +155,12 @@ ul li {
         text-align: center;
         letter-spacing: 0.03em;
     
-    color: #212121;
+    color: var(--title-text-color) ;
 }
 
 /* team  */
 .team{
-    background-color: #F5F4FA;
+    background-color: var(--secondary-white-color);
 }
 .team-title{
     font-weight: 700;
@@ -166,7 +169,7 @@ ul li {
         text-align: center;
         letter-spacing: 0.03em;
     
-    color: #212121;
+    color: var(--title-text-color) ;
 }
 .team-name{
     font-weight: 500;
@@ -175,16 +178,14 @@ ul li {
         text-align: center;
         letter-spacing: 0.03em;
     
-    color: #212121;
+    color: var(--title-text-color) ;
 }
 .team-paragrap{
-    font-weight: 400;
-        font-size: 16px;
         line-height: 1.18;
         text-align: center;
         letter-spacing: 0.03em;
     
-    color: #757575;
+    color: var(--paragraph-color);
 }
 
 
@@ -196,25 +197,23 @@ ul li {
         text-align: center;
         letter-spacing: 0.03em;
     
-        color: #212121;
-        background: #F5F4FA;
+        color: var(--title-text-color) ;
+        background: var(--secondary-white-color);
             border-radius: 4px;
 }
 .filter-btn:active,
 .filter-btn:focus{
-    background: #2196F3;
+    background-color: var(--accent-filter-btn-color);
 
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
 .card{
     text-decoration-line: none;
-        font-weight: 400;
-        font-size: 16px;
         line-height: 1.88;
         letter-spacing: 0.03em;
     
-        color: #757575;
+        color: var(--paragraph-color);
 }
 .card-title{
     font-weight: 700;
@@ -222,11 +221,5 @@ ul li {
         line-height: 2;
         letter-spacing: 0.06em;
     
-        color: #212121;
+        color: var(--title-text-color) ;
 }
-/* .card:hover,
-.card:focus,
-.card-title:hover,
-.card-title:focus{
-    color: #2196F3;
-} */
