--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,7 @@ ul li {
 }
 /* button */
 .hero-btn {
+    cursor: pointer;
     font-weight: 700;
         font-size: 16px;
         line-height: 1.88;
@@ -191,15 +192,16 @@ ul li {
 
 /* portfolio.html */
 .filter-btn{
+    cursor: pointer;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.62;
         text-align: center;
         letter-spacing: 0.03em;
     
-        color: var(--title-text-color) ;
-        background: var(--secondary-white-color);
-            border-radius: 4px;
+    color: var(--title-text-color) ;
+    background: var(--secondary-white-color);
+        border-radius: 4px;
 }
 .filter-btn:active,
 .filter-btn:focus{
