--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,8 @@ ul li {
   border-radius: 4px;
 }
 .filter-btn:active,
-.filter-btn:focus {
+.filter-btn:focus,
+.filter-btn:hover {
   background-color: var(--accent-filter-btn-color);
 
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
